# tinyclaw

./: .claudeignore   .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  backup.sh  install.sh  memory-maintenance-heartbeat.md  package-lock.json  package.json  queue-processor.js  show-qr.sh  tinyagi.sh  tinyclaw.sh  tsconfig.json  uninstall.sh  whatsapp-client.js
.agents/skills/mem/: SKILL.md
.agents/skills/schedule/: SKILL.md
.agents/skills/schedule/scripts/: schedule.py  schedule.sh
.agents/skills/send-user-message/scripts/: send_message.js  send_message.ts
.agents/skills/tasks/scripts/: tasks.sh
.agents/skills/tinyclaw-admin/: SKILL.md
.claude/hooks/: session-start.sh
.claude/skills/task-memory/: SKILL.md
.claude/skills/task-memory/examples/: sample-tasks.md
.claude/skills/task-memory/templates/: task-template.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build.yml  doc-gardening.yml  docs-lint.yml  release.yml  smoke-test.yml
.tinyclaw/: config.json  heartbeat.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
channels/: discord.json  telegram.json  tui.json  whatsapp.json
crates/tinyclaw-android/: Cargo.toml
crates/tinyclaw-android/src/: lib.rs
crates/tinyclaw-channel-discord/: Cargo.toml
crates/tinyclaw-channel-discord/src/: lib.rs
crates/tinyclaw-channel-telegram/: Cargo.toml
crates/tinyclaw-channel-telegram/src/: lib.rs
crates/tinyclaw-cli/: Cargo.toml
crates/tinyclaw-cli/src/: main.rs
crates/tinyclaw-core/: Cargo.toml
crates/tinyclaw-core/src/: channel.rs  config.rs  lib.rs  logging.rs  message.rs  queue.rs
crates/tinyclaw-http/: Cargo.toml
crates/tinyclaw-http/src/: lib.rs
crates/tinyclaw-inference/: Cargo.toml
crates/tinyclaw-inference/src/: conversation.rs  engine.rs  lib.rs  processor.rs
db/migrations/: 20260213120000_create_token_usage.sql  20260213120001_create_api_rate_limits.sql
docker/: entrypoint.sh
docs/: ACCESS_CONTROL.md  AGENTS.md  AGENT_COMMUNICATION_PROTOCOL.md  DESIGN.md  FRONTEND.md  INSTALL.md  MESSAGE-PATTERNS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  QUEUE.md  RELIABILITY.md  SECURITY.md  TEAMS.md  TROUBLESHOOTING.md  VOICE.md  stream-logs.md  swarm.md
docs/bug-fixes/: PATCHES-README.md  tinyclaw-bug-solutions.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/plans/: 2026-02-09-persistent-memory-task-tracking-design.md
docs/product-specs/: index.md  new-user-onboarding.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
install/: install.sh
lib/: agents.sh  common.sh  daemon.sh  heartbeat-cron.sh  messaging.sh  setup-wizard.sh  teams.sh  tinyagi.sh  update.sh
lib/templates/agent-tools/openviking/: README.md  openviking-tool.js  ovk-ls.sh  ovk-read.sh  ovk-write.sh  ovk.sh
merge-engine/: Cargo.toml
merge-engine/src/: amalgamator.rs  diff3.rs  lib.rs  matcher.rs  parser.rs  patterns.rs  resolver.rs  search.rs  types.rs  vsa.rs
scripts/: bundle.sh  doc-gardening.sh  docs-lint.sh  install.sh  remote-install.sh  test-openviking-context-plugin.js  test-openviking-prefetch-parser.js
src/: discord-client.ts  pairing-cli.ts  queue-processor.ts  telegram-client.ts  types.ts  whatsapp-client.ts
src/channels/: default-agent.ts  discord-client.ts  teams-client.ts  telegram-client.ts  telnyx-voice-client.ts  tui-client.ts  whatsapp-client.ts
src/lib/: agent-setup.ts  agent.ts  api-server.ts  cerebras.ts  config.ts  conversation.ts  db.ts  heartbeat.ts  invoke.ts  logging.ts  memory-rerank.ts  memory.ts  openviking-prefetch.ts  openviking-session-map.ts  plugins.ts  question-bridge.ts  routing.ts  signals.ts  synthesize.ts  transcribe.ts  types.ts
src/plugins/openviking-context/: index.ts  prefetch-gate.ts  prefetch.ts  session-map.ts
src/server/: index.ts
src/server/routes/: agents.ts  chatroom.ts  chats.ts  logs.ts  messages.ts  queue.ts  settings.ts  tasks.ts
src/tools/: openviking-tool.ts
src/visualizer/: chatroom-viewer.tsx  team-visualizer.tsx
tinyoffice/: package.json
tinyoffice/src/app/: layout.tsx  page.tsx
tinyoffice/src/app/agents/: page.tsx
tinyoffice/src/app/connect/: page.tsx
tinyoffice/src/app/office/: layout.tsx  page.tsx
tinyoffice/src/app/projects/: page.tsx
tinyoffice/src/app/rooms/: page.tsx
tinyoffice/src/app/settings/: page.tsx
tinyoffice/src/app/setup/: page.tsx
tinyoffice/src/app/tasks/: layout.tsx  page.tsx
tinyoffice/src/components/: agent-chat-view.tsx  app-shell.tsx  chatroom-view.tsx  pixel-office-char.tsx  pixel-office-scene.tsx  sidebar.tsx  skills-constellation.tsx
tinyoffice/src/components/agent/: chat-view.tsx  heartbeat-tab.tsx  schedule-tab.tsx
tinyoffice/src/components/task/: task-card-overlay.tsx  task-card.tsx  (+1 more)
tinyoffice/src/lib/: api.ts
web/src/components/: sidebar.tsx
web/src/lib/: api.ts
(+11 files in other folders)
