[workspace]
members = [
    "crates/tinyclaw-core",
    "crates/tinyclaw-inference",
    "crates/tinyclaw-channel-discord",
    "crates/tinyclaw-channel-telegram",
    "crates/tinyclaw-http",
    "crates/tinyclaw-cli",
    "crates/tinyclaw-android",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
dashmap = "6"
