[package]
name = "tinyclaw-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyclaw-core = { path = "../tinyclaw-core" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
