[package]
name = "tinyclaw-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyclaw-core = { path = "../tinyclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
